--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       
       .navbar {
         list-style-type: none;
-        margin: 0;
+        margin: 0, 50px;
         padding: 0;
         overflow: hidden;
         background-color: #333;
@@ -105,7 +105,7 @@
     </ul>
     
     <div class="title">   
-      <h1 href="index.html" style="border-bottom: 1.0px solid white; width: 50%; margin: auto;">H A Z E &nbsp W E B S I T E &nbsp D E S I G N</h1>   
+      <h1 href="index.html" style="border-bottom: 1.0px solid white; width: 20%; margin: auto;">H A Z E<br> W E B S I T E S</h1>   
       <p style="font-family: cursive;">Designed For You </p>  
       <a href="#" class="fa fa-facebook"></a>
       <a href="#" class="fa fa-twitter"></a>
